WIP test trie data structures

--- a/assignment1-test_trie.ipynb
+++ b/assignment1-test_trie.ipynb
@@ -12,7 +12,8 @@
     "import re\n",
     "import string\n",
     "import os\n",
-    "from time import time"
+    "from time import time\n",
+    "from trie import Trie"
    ]
   },
   {
@@ -356,14 +357,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "class KatzBackoff():\n",
+    "### class KatzBackoff():\n",
     "    def __init__(self, discount):\n",
     "        self.discount = discount\n",
     "\n",
@@ -397,7 +396,7 @@
     "                    else:\n",
     "                        ngrams[key][w2] += 1\n",
     "        return ngrams\n",
-    "    \n",
+    "    1\n",
     "    def fit(self, corpus):\n",
     "        self.unigrams = self.build_ngrams(0, corpus)\n",
     "        self.bigrams = self.build_ngrams(1, corpus)\n",
